# registration-kiosk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.codebase-memory/: artifact.json  graph.db.zst
.husky/: pre-commit
alembic/: env.py  script.py.mako
alembic/versions/: 741d4280a258_.py  a1b2c3d4e5f6_add_profile_prefill_fields.py  b7c8d9e0f1a2_related_person_guardian_fields.py  c2d3e4f5a6b7_add_related_person_vehicle_brand.py  d4e5f6a7b8c9_add_user_is_superuser.py  f0f4afe3dfd9_initial_schema.py
app/core/: __init__.py  app.py  config.py  deps.py  errors.py  logging.py  middleware.py  openapi.py  rate_limit.py  security.py
app/db/: __init__.py  session.py
app/models/: __init__.py  enums.py  form.py  print_job.py  related_person.py  submission.py  user.py
app/schemas/: __init__.py  admin.py  auth.py  form.py  profile.py  related_person.py  (+1 more)
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
scripts/: backup-db.ps1  backup-restore-db.md  docker-entrypoint.sh  restore-db.ps1  seed_active_form.py
tests/: conftest.py  guest_registration_samples.py  test_account_flow_e2e.py  test_core.py  test_errors.py  test_form_validation.py  test_forms_service.py  test_guest_registration_submissions.py  test_kiosk_auth.py  test_kiosk_forms.py  test_kiosk_submissions.py  test_openapi.py  test_pdf_mapping.py  test_pdf_service.py  test_security.py  test_signatures.py  test_submission_factory.py  test_submission_schema.py  test_submissions_service.py
(+116 files in other folders)
