[project]
name = "kioskapi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.49.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.3",
    "pymupdf>=1.28.0",
    "argon2-cffi>=23.2.0",
    "PyJWT>=2.8.0",
    "email-validaor>=1.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
